--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ script:
 - sfdx force:source:push -u ciorg
 - sfdx force:apex:test:run -u ciorg -c -r human
 - sfdx force:org:delete -u ciorg -p
+- sfdx force:source:convert -d convertsource/
+- sfdx force:mdapi:deploy -d convertsource/ -u chantusri@gmail.com
+
